fix(scrollbar): set min-height to scrollbar thumb

--- a/src/common/styles/mixins.css
+++ b/src/common/styles/mixins.css
@@ -260,6 +260,7 @@
 
   /* Handle */
   &::-webkit-scrollbar-thumb {
+    min-height: 68px;
     border: solid 6px transparent;
     border-radius: 8px;
     box-shadow: inset 0 0 15px 15px var(--color-grey-light);
